[package]
name = "passrab"
version = "0.1.0"
edition = "2021"
authors = ["Ayush Agrawal <hello@ayushagr.me>"]
description = "A password manager written in Rust"

[dependencies]
aes = "0.7"
block-modes = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
sha2 = "0.10"
rpassword = "7.3.1"
